@startuml
title BookYourSport - Auth Service Class Diagram

left to right direction

skinparam backgroundColor #FAFAFA
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 25
skinparam ranksep 30
skinparam defaultFontSize 12

skinparam class {
    BorderColor #555555
    FontColor #222222
    BackgroundColor #FFFFFF
    ArrowColor #555555
}

skinparam package {
    BorderColor #888888
    FontColor #333333
}

package "API" #FFF3CD {
    class AuthController {
        +RegisterAsync(...)
        +LoginAsync(...)
        +RefreshAsync(...)
        +LogoutAsync(...)
        +GetUsersAsync(...)
        +UpdateApprovalStatusAsync(...)
        +UpdateUserRoleAsync(...)
        +RequestClubOwnershipAsync()
    }
}

package "Repositories" #E3F2FD {
    interface IUserRepository
    class UserRepository

    interface IRefreshTokenRepository
    class RefreshTokenRepository
}

package "Services" #E8F5E9 {
    interface ITokenService
    class TokenService
}

package "Data" #F3E5F5 {
    class AppDbContext {
        +Users
        +RefreshTokens
    }
}

package "Entities" #FCE4EC {
    class User {
        +Id : Guid
        +Email : string
        +Role : string
        +ApprovalStatus : string
        +ContractStatus : string
        +SubscriptionStatus : string
    }

    class RefreshToken {
        +Id : Guid
        +UserId : Guid
        +Token : string
        +ExpiresAt : DateTime
        +RevokedAt : DateTime?
    }
}

AuthController --> IUserRepository
AuthController --> IRefreshTokenRepository
AuthController --> ITokenService

UserRepository ..|> IUserRepository
RefreshTokenRepository ..|> IRefreshTokenRepository
TokenService ..|> ITokenService

UserRepository --> AppDbContext
RefreshTokenRepository --> AppDbContext

AppDbContext --> User
AppDbContext --> RefreshToken

User "1" -- "0..*" RefreshToken

@enduml
